--- a/package.json
+++ b/package.json
@@ -11,15 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@hookform/resolvers": "^2.8.4",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hook-form": "^7.17.5",
-    "sass": "^1.43.3",
-    "yup": "^0.32.11"
+    "sass": "^1.43.3"
   },
   "devDependencies": {
     "eslint": "8.1.0",
