--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "next": "11.1.2",
@@ -19,7 +19,7 @@
     "sass": "^1.43.3"
   },
   "devDependencies": {
-    "eslint": "8.1.0",
+    "eslint": "^8.4.1",
     "eslint-config-next": "11.1.2"
   }
 }
