--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.0.4",
-    "@mui/material": "^5.0.4",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "sass": "^1.43.3"
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "next": "^12.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.45.0"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
